--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
